errores-backend.txt
Tip: Interested in query caching in just a few lines of code? Try Accelerate today! https://pris.ly/tip-3-accelerate

 

Prisma schema loaded from prisma/schema.prisma

Datasource "db": PostgreSQL database "railway", schema "public" at "postgres.railway.internal:5432"

 

8 migrations found in prisma/migrations

 

 

No pending migrations to apply.

Running prisma db seed...

Running seed command `npx ts-node prisma/seed.ts` ...

/root/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:859

    return new TSError(diagnosticText, diagnosticCodes, diagnostics);

           ^

TSError: тип Unable to compile TypeScript:

prisma/seed.ts(2,20): error TS7016: Could not find a declaration file for module 'bcrypt'. '/app/node_modules/bcrypt/bcrypt.js' implicitly has an 'any' type.

  Try `npm i --save-dev @types/bcrypt` if it exists or add a new declaration (.d.ts) file containing `declare module 'bcrypt';`

 

    at createTSError (/root/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:859:12)

    at reportTSError (/root/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:863:19)

    at getOutput (/root/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:1077:36)

    at Object.compile (/root/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:1433:41)

    at Module.m._compile (/root/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:1617:30)

    at Module._extensions..js (node:internal/modules/cjs/loader:1613:10)

    at Object.require.extensions.<computed> [as .ts] (/root/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:1621:12)

    at Module.load (node:internal/modules/cjs/loader:1275:32)

    at Function.Module._load (node:internal/modules/cjs/loader:1096:12)

    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:164:12) {

  diagnosticCodes: [ 7016 ]

}

 

An error occurred while running the seed command:

Error: Command failed with exit code 1: npx ts-node prisma/seed.ts

Prisma schema loaded from prisma/schema.prisma